<resources>
    <string name="app_name">长江电商</string>
    <string name="hello_world">Hello world!</string>
    <string name="save">保存</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="next">下一步</string>
    <string name="filter">筛选</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="default_option">[默认]</string>
    <string name="expand">展开</string>
    <string name="shrink">收起</string>
    <string name="buy">购买</string>
    <string name="sell">出售</string>
    <string name="modify">修改</string>
    <string name="manager">管理</string>
    <string name="do_request_ing">请求中…</string>
    <string name="do_get_sms_code_ing">正在获取短信验证码…</string>
    <string name="do_check_user_ing">正在检验用户名…</string>
    <string name="loading_ing">加载中…</string>
    <string name="loading_data">正在加载，请稍后…</string>
    <string name="load_data_error">加载失败，点击重新加载</string>
    <string name="load_data_empty">暂无内容，点击刷新</string>
    <string name="load_filter_data_empty">该筛选条件下无信息，请重新设置筛选条件</string>
    <string name="load_my_buy_data_empty">您还没有任何供求信息，赶快发布您的供求吧，让更多潜在生意伙伴和您谈生意，争取更多的生意机会。</string>
    <string name="load_ufm_contract_data_empty">暂时没有需要您确认的合同，赶快去发布您的供求信息吧，获取更多的生意机会。</string>
    <string name="exit_app_tips">再按一次退出程序</string>
    <string name="user_not_login">当前用户未登录，请先登录！</string>
    <string name="user_login_invalid">当前用户登录失效，如果继续使用，请重新登录！</string>
    <string name="user_offline">用户已在其它设备登录，如果继续使用，请重新登录！</string>
    <string name="user_token_expire">当前用户登录失效，如果继续使用，请重新登录！</string>
    <string name="user_deposit_not_enough">当前用户保证金不足，无法发布信息，请先缴纳保证金！</string>
    <string name="view_image_demo">点此查看范例</string>
    <string name="save_success">保存成功</string>
    <string name="save_failed">保存失败</string>
    <string name="unit_price">元</string>
    <string name="unit_price_ton">元/吨</string>
    <string name="data_no_input">未填写</string>
    <string name="data_to_input">填写</string>
    <string name="data_select">选择</string>
    <string name="data_selected">已选择</string>
    <string name="data_empty">无</string>
    <string name="data_unknown">未知</string>
    <string name="price_data_empty">N/A</string>
    <string name="status_valid">有效</string>
    <string name="status_invalid">无效</string>
    <string name="reset">重置</string>
    <string name="default_company_name">长江电商VIP</string>
    <string name="default_user_name">匿名用户</string>
    <string name="tv_star">★</string>
    <string name="tv_star_small">*</string>
    <string name="input_message_hint">填写</string>
    <string name="input_account_hint">请输入手机号</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="input_verifycode_hint">请输入验证码</string>
    <string name="input_old_pwd_hint">请输入旧密码</string>
    <string name="input_new_pwd_hint">请输入新密码</string>
    <string name="input_confirm_password_hint">请再次输入密码</string>
    <string name="user_login">登录</string>
    <string name="user_register">注册</string>
    <string name="user_forget_password">忘记密码？</string>
    <string name="user_find_password">找回密码</string>
    <string name="user_remember_password">记住密码</string>
    <string name="user_modify_password">修改密码</string>
    <string name="user_login_info_error">手机号或密码为空</string>
    <string name="phone_empty">手机号不能为空</string>
    <string name="sms_verify_code_empty">验证码不能为空</string>
    <string name="sms_verify_code_format_error">验证码格式不正确</string>
    <string name="password_empty">密码不能为空</string>
    <string name="password_not_equal">两次密码不相同</string>
    <string name="password_length_invalid">密码长度必须为6-12位</string>
    <string name="phonenumber_format_error">手机号码格式不正确</string>
    <string name="agree_glshop_protocol">长江电商平台协议</string>
    <string name="reg_account_title">您的长江电商登录账号为</string>
    <string name="user_logining">登录中…</string>
    <string name="next_step">下一步</string>
    <string name="submit">完成</string>
    <string name="send_sms_verifycode">我们将发送验证码至:</string>
    <string name="get_sms_verifycode_init">获取验证码</string>
    <string name="get_sms_verifycode">重新获取验证码</string>
    <string name="geting_verifycode_hint">正在获取验证码&#8230;</string>
    <string name="geting_img_verifycode_hint">获取验证码&#8230;</string>
    <string name="get_verifycode_error">获取失败</string>
    <string name="wait_get_verifycode_hint">秒后重发验证码</string>
    <string name="goto_auth">立即去认证</string>
    <string name="skip_auth">知道了以后认证，跳过</string>
    <string name="default_title">长江电商</string>
    <string name="submiting_request">正在提交&#8230;</string>
    <string name="register_success">注册成功</string>
    <string name="reset_pwd_success">找回密码成功</string>
    <string name="modify_pwd_success">修改密码成功</string>
    <string name="set_user_password">设置密码</string>
    <string name="input_user_phonenumber">输入手机号码</string>
    <string name="input_sms_verifycode">输入验证码</string>
    <string name="find_pwd_security_tips">若无法通过该方式找回密码，请致电%s联系我司客服为您解决。</string>
    <string name="user_auth_success">认证成功</string>
    <string name="main_page_title">长江电商</string>
    <string name="menu_find_buys">找买找卖</string>
    <string name="menu_my_buys">我的供求</string>
    <string name="menu_my_contract">我的合同</string>
    <string name="menu_my_purse">我的钱包</string>
    <string name="menu_my_profile">我的资料</string>
    <string name="menu_setting">帮助</string>
    <string name="menu_price_forecast">价格预测</string>
    <string name="product_type_sand">黄砂</string>
    <string name="product_type_stone">石子</string>
    <string name="menu_title_select_port">选择地段</string>
    <string name="network_disconnected">无网络连接</string>
    <string name="getting_data">正在加载…</string>
    <string name="error_unknown">未知错误</string>
    <string name="error_no_connneted_net">无网络连接，请稍后重试!</string>
    <string name="error_weak_net">网络不给力，请稍后再试!</string>
    <string name="error_req_refresh">刷新数据失败!</string>
    <string name="error_req_load_more">加载更多数据失败!</string>
    <string name="error_req_error">请求失败，请稍后再试!</string>
    <string name="error_req_get_info">获取信息失败，请稍后再试!</string>
    <string name="error_req_get_list">获取列表失败，请稍后再试!</string>
    <string name="error_req_submit_info">提交数据失败，请稍后再试!</string>
    <string name="error_req_cancel">取消失败，请稍后再试!</string>
    <string name="error_req_user_login">登录失败，请稍后再试!</string>
    <string name="error_req_user_logout">注销失败，请稍后再试!</string>
    <string name="error_req_user_regist">注册失败，请稍后再试!</string>
    <string name="error_req_get_upgrade_info">获取升级信息失败，请稍后再试!</string>
    <string name="error_req_get_smscode">获取短信验证码失败，请稍后再试!</string>
    <string name="error_code_10003">验证码错误!</string>
    <string name="error_code_10004">短信验证码发送失败!</string>
    <string name="error_code_10005">用户名或密码错误!</string>
    <string name="error_code_10006">旧密码错误!</string>
    <string name="error_code_10005_2">密码错误!</string>
    <string name="error_code_10007">新密码不能和旧密码相同!</string>
    <string name="error_code_10008">用户不存在!</string>
    <string name="error_code_10009">此手机号码已经注册过，请换个手机号码注册!</string>
    <string name="error_code_50000">交易结束时间不能小于当前时间!</string>
    <string name="error_code_50001">交易起始时间不能大于交易结束时间!</string>
    <string name="error_code_100003005">单价最大值不能大于%s!</string>
    <string name="error_code_100003006">总量最大值不能大于%s!</string>
    <string name="error_code_100005009">该合同已确认，无法重复确认!</string>
    <string name="error_code_100005024">您已经评价过,不能重复评价!</string>
    <string name="error_code_100003003">不能重复申请交易询盘!</string>
    <string name="error_code_100005023">您不是合同买卖双方，不能操作此合同!</string>
    <string name="error_code_100005025">该合同的评价期限已过期，系统已自动默认评价，用户不能再评价!</string>
    <string name="error_code_100005027">您不是合同的买家，不能结算申请!</string>
    <string name="error_code_100005028">您不是合同的卖家，不能同意结算申请!</string>
    <string name="error_code_100005034">该合同的确认期限已过期，无法确认!</string>
    <string name="error_code_100005035">该合同的付款期限已过期，无法付款!</string>
    <string name="error_code_100005011">该合同的付款期限已过期，无法付款!</string>
    <string name="error_code_100005010">保证金账户余额不足!</string>
    <string name="error_code_100005014">货款账户余额不足!</string>
    <string name="forecast_title">今日参考价格</string>
    <string name="forecast_title_product_name">商品名称</string>
    <string name="forecast_title_spec">规格</string>
    <string name="forecast_title_today_price">今日参考价格</string>
    <string name="forecast_title_oneweek">一周价格预测</string>
    <string name="forecast_title_twoweek">两周价格预测</string>
    <string name="find_buy">找买找卖</string>
    <string name="menu_title_buy_filter">选择筛选类型</string>
    <string name="buy_filter_title_product">种类规格</string>
    <string name="buy_filter_title_area">交易地域</string>
    <string name="buy_filter_title_datetime">交易时间范围</string>
    <string name="pub_by_custom_service">致电平台代为发布信息</string>
    <string name="pub_by_myself">自己发布信息</string>
    <string name="publish_buy_message">发布信息</string>
    <string name="publish_goods_style">详细规格</string>
    <string name="publish_buy_message_prev">发布信息预览</string>
    <string name="menu_title_select_buy_order">选择查看排序</string>
    <string name="menu_title_select_mybuy_filter">选择查看供求分类</string>
    <string name="menu_title_select_buy_type">选择发布信息类型</string>
    <string name="menu_title_select_product_type">选择货物信息类型</string>
    <string name="menu_title_select_product_category">选择货物分类</string>
    <string name="menu_title_select_product_spec">选择货物规格(单位:mm)</string>
    <string name="publish_type_buy">求购信息</string>
    <string name="publish_type_sell">出售信息</string>
    <string name="publish_buy_type">发布信息类型</string>
    <string name="business_product_message">货物信息：</string>
    <string name="business_product_purchases">购买量</string>
    <string name="business_product_portprice">到港单价</string>
    <string name="buy_trade_area">交易地域</string>
    <string name="buy_trade_date">交易时间</string>
    <string name="buy_product_type">货物种类</string>
    <string name="business_discharge_date">交货日期范围：</string>
    <string name="business_discharge_address_type">交货地址指定方式</string>
    <string name="discharge_addr_type_me_decide">己方指定</string>
    <string name="discharge_addr_type_another_decide">对方指定</string>
    <string name="upload_pic_type">选择上传方式</string>
    <string name="business_discharge_address_detail">详细交货地点信息</string>
    <string name="business_discharge_address_hint">请输入详细地址</string>
    <string name="product_unit_ton_hint">吨</string>
    <string name="product_unit_cube_hint">立方</string>
    <string name="business_water_depth">水深度</string>
    <string name="business_discharge_port_water_depth">卸货地港口水深度</string>
    <string name="business_discharge_shipping_ton">可停泊载重船吨位</string>
    <string name="business_buy_remarks">购买备注</string>
    <string name="business_buy_remarks_hint">填写</string>
    <string name="business_buyer_tips">*号为必填项</string>
    <string name="buy_status_valid">发布时间: %s</string>
    <string name="buy_status_invalid_unpass_review">该信息已于%s客服审核不通过</string>
    <string name="buy_status_invalid_expired">该信息已于%s过期</string>
    <string name="buy_status_invalid_contract_going">该信息已于%s产生交易</string>
    <string name="unit_m_v3">(单位:米)</string>
    <string name="product_color">颜色</string>
    <string name="product_area">产地</string>
    <string name="product_sediment_percentage">含泥量</string>
    <string name="product_sediment_block_percentage">泥块含量</string>
    <string name="product_water_percentage">含水率</string>
    <string name="product_appearance_density">表观密度</string>
    <string name="product_stacking_percentage">堆积密度</string>
    <string name="product_sturdiness_percentage">坚固性指标</string>
    <string name="product_crunch_percentage">压碎值指标</string>
    <string name="product_needle_plate_percentage">针片状颗粒含量</string>
    <string name="product_specifications_remarks">货物信息备注</string>
    <string name="product_unit_percent">(%)</string>
    <string name="product_unit_density">(kg/m&#179;)</string>
    <string name="product_unit_ton">(吨)</string>
    <string name="product_unit_m">(米)</string>
    <string name="pub_type_tips">您正在发布信息，您可以选择致电平台客服免费帮您发布信息或自己手动输入发布信息。</string>
</resources>