<?xml version="1.0" encoding="utf-8"?>
<!-- 输入卸货地址信息Layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:glshop="http://schemas.android.com/apk/res/com.glshop.net"
    android:id="@+id/ll_item_addr"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical" >

    <!-- 详细地址 -->

    <com.glshop.net.ui.basic.view.listitem.BuyTextItemView
        android:id="@+id/ll_item_discharge_address"
        style="@style/BuyTextItem.Action.Top"
        glshop:itemTitle="@string/business_discharge_address_detail"
        glshop:showItemClickIcon="true"
        glshop:showItemIcon="false" />

    <View style="@style/item_devider_line" />

    <!-- 地址详情及照片 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_item_middle"
        android:orientation="vertical"
        android:paddingLeft="@dimen/buy_item_padding"
        android:paddingRight="@dimen/buy_item_padding" >

        <TextView
            android:id="@+id/tv_addr_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buy_item_height"
            android:gravity="center_vertical"
            android:text="@string/data_no_input"
            android:textColor="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center" >

            <ImageView
                android:id="@+id/iv_item_addr_pic_1"
                android:layout_width="@dimen/image_thumbnail_width"
                android:layout_height="@dimen/image_thumbnail_heigh"
                android:background="@drawable/ic_default_pic"
                android:contentDescription="@null" />

            <ImageView
                android:id="@+id/iv_item_addr_pic_2"
                android:layout_width="@dimen/image_thumbnail_width"
                android:layout_height="@dimen/image_thumbnail_heigh"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/ic_default_pic"
                android:contentDescription="@null"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/iv_item_addr_pic_3"
                android:layout_width="@dimen/image_thumbnail_width"
                android:layout_height="@dimen/image_thumbnail_heigh"
                android:background="@drawable/ic_default_pic"
                android:contentDescription="@null"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/item_devider_line" />

    <!-- 水深度 -->

    <com.glshop.net.ui.basic.view.listitem.BuyTextItemView
        style="@style/BuyTextItem.Middle"
        glshop:itemContentColor="@color/gray"
        glshop:itemSecondTitle="@string/product_unit_m"
        glshop:itemTitle="@string/business_water_depth"
        glshop:showItemClickIcon="false"
        glshop:showItemIcon="false" />

    <View style="@style/item_devider_line" />

    <!-- 卸货地港口水深度 -->

    <com.glshop.net.ui.basic.view.listitem.BuyTextItemView
        android:id="@+id/ll_item_port_water_depth"
        style="@style/BuyTextItem.Middle"
        glshop:itemContent="0"
        glshop:itemContentColor="@color/gray"
        glshop:itemSecondTitle="@string/unit_m_v3"
        glshop:itemTitle="@string/business_discharge_port_water_depth"
        glshop:showItemClickIcon="false"
        glshop:showItemIcon="false" />

    <View style="@style/item_devider_line" />

    <!-- 实际船舶吃水深度 -->

    <com.glshop.net.ui.basic.view.listitem.BuyTextItemView
        android:id="@+id/ll_item_port_shipping_water_depth"
        style="@style/BuyTextItem.Bottom"
        glshop:itemContent="0"
        glshop:itemContentColor="@color/gray"
        glshop:itemSecondTitle="@string/product_unit_ton"
        glshop:itemTitle="@string/business_discharge_shipping_ton"
        glshop:showItemClickIcon="false"
        glshop:showItemIcon="false" />

</LinearLayout>